# jgb

./: .gitignore  Cargo.toml  Cranky.toml  LICENSE  README.md  clippy.toml  tarpaulin.toml
.github/workflows/: rust.yml
jgb-cli/: Cargo.toml
jgb-cli/src/: main.rs
jgb-core/: Cargo.toml
jgb-core/src/: apu.rs  audio.rs  config.rs  cpu.rs  data.rs  debug.rs  eventloop.rs  font.rs  graphics.rs  initialization.rs  input.rs  lib.rs  memory.rs  ppu.rs  serialize.rs  startup.rs  timer.rs
jgb-core/src/apu/: channels.rs  filter.rs  timer.rs
jgb-core/src/apu/channels/: noise.rs  pulse.rs  wave.rs
jgb-core/src/cpu/: instructions.rs  registers.rs  tests.rs
jgb-core/src/cpu/instructions/: parse.rs
jgb-core/src/cpu/tests/: arithmetic.rs  bits.rs  bitshift.rs  controlflow.rs  cyclecount.rs  load.rs  singlebit.rs
jgb-core/src/memory/: address.rs  addresses.rs  ioregisters.rs  mapper.rs
jgb-core/src/memory/ioregisters/: lcdc.rs
jgb-core/src/memory/mapper/: mbc3.rs  mbc7.rs
jgb-core/src/ppu/: queue.rs
jgb-gui/: Cargo.toml
jgb-gui/src/: app.rs  lib.rs  main.rs
jgb-gui/src/app/: config.rs  input.rs
jgb-main/: Cargo.toml
jgb-proc-macros/: Cargo.toml
jgb-proc-macros/src/: lib.rs
