[workspace]
members = [
    "jgb-proc-macros",
    "jgb-core",
    "jgb-cli",
    "jgb-gui",
]

[workspace.dependencies]
# Pin serde to <= 1.0.171 until/unless serde_derive stops including precompiled binaries
serde = { version = ">= 1.0.0, <= 1.0.171", features = ["derive"] }

[profile.release-lto]
inherits = "release"
lto = true

[profile.profiling]
inherits = "release"
debug = true
