[package]
name = "jgb-cli"
version = "0.10.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgb-core = { path = "../jgb-core" }

anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
