[package]
name = "jgb-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
log = "0.4"
once_cell = "1.17"
serde = "1.0"
sdl2 = "0.35"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
