[package]
name = "jgb-core"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgb-proc-macros = { path = "../jgb-proc-macros" }

bincode = "1.3"
log = "0.4"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
sdl2 = { version = "0.35", features = ["hidapi", "ttf"] }
thiserror = "1.0"
tinyvec = "1.6"

[dev-dependencies]
rand = "0.8"
