[package]
name = "jgb-core"
version = "0.10.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgb-proc-macros = { path = "../jgb-proc-macros" }

bincode = "1"
log = "0.4"
serde = { workspace = true }
sdl2 = { version = "0.35", features = ["hidapi", "ttf"] }
thiserror = "1"
tinyvec = "1"

[dev-dependencies]
rand = "0.8"
