[package]
name = "jgb-gui"
version = "0.10.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgb-core = { path = "../jgb-core" }

anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
eframe = "0.21"
egui = "0.21"
egui_extras = "0.21"
env_logger = "0.10"
log = "0.4"
rfd = "0.11"
sdl2 = { version = "0.35", features = ["ttf"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
