[package]
name = "jgb-gui"
version = "0.10.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgb-core = { path = "../jgb-core" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
eframe = "0.22"
egui = "0.22"
egui_extras = "0.22"
env_logger = "0.10"
log = "0.4"
rfd = "0.11"
sdl2 = { version = "0.35", features = ["ttf"] }
serde = { workspace = true }
toml = "0.7"
