[package]
name = "jgb-gui"
version = "0.10.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgb-core = { path = "../jgb-core" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
eframe = "0.26"
egui = "0.26"
egui_extras = "0.26"
env_logger = "0.11"
log = "0.4"
rfd = "0.14"
sdl2 = { version = "0.36", features = ["ttf"] }
serde = { workspace = true }
toml = "0.8"

[lints]
workspace = true
